Crawler Website and Producer Kafka

--- a/.env
+++ b/.env
@@ -14,6 +14,9 @@ FORWARD_TO_ELASTIC=no
 ## Determine the topic you want to consume!
 TOPIC_FOR_CONSUME=news
 
+## NOTE : The topic name for consuming must be the same as the topic name for producing.
+## The topic name of the producer is determined from the name of the folder where the api file is run.
+
 ## Select the group ID for the news topic!
 GROUPID=news-kompas
 #GROUPID=news-detik
