Crawler Website and Produce Kafka

--- a/.env
+++ b/.env
@@ -39,6 +39,9 @@ GROUPID=news-kompas
 ## Select the group ID for the film topic!
 #GROUPID=film-lk21
 
+## Select the group ID for the socialmedia topic!
+#GROUPID=socialmedia-x
+
 ## Define auto_offset_reset parameter, select earliest or latest.
 ## Default earliest
 AUTO_OFFSET_RESET=earliest
